force-app/main/default/objects/Activity/fields/Company_Group__c.field-meta.xml
<CustomField>
    <fullName>Company_Group__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. SF-853</description>
    <label>Company Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>