force-app/main/default/objects/Activity/fields/Large_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Large_Account_Manager__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. SF-853</description>
    <label>Large Account Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>