force-app/main/default/objects/Activity/fields/Owner_Territories_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Owner_Territories_Level_2__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-853</description>
    <label>Owner Territories Level 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>