force-app/main/default/objects/Activity/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-948</description>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>