force-app/main/default/objects/Activity/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-948</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>